err
mkdir -p build/src
arm-none-eabi-g++ -mthumb -mfloat-abi=hard -mfpu=fpv5-d16 -mcpu=cortex-m7 -Isrc -Isrc/sys -Isrc/usbd -IDrivers/CMSIS/Include -IDrivers/CMSIS/Device/ST/STM32H7xx/Include -IDrivers/STM32H7xx_HAL_Driver/Inc -IDrivers/STM32H7xx_HAL_Driver/Inc/Legacy -IMiddlewares/ST/STM32_USB_Device_Library/Core/Inc -IMiddlewares/ST/STM32_USB_Device_Library/Class/CDC/Inc -IMiddlewares/Third_Party/FatFs/src -Isrc -I.  -DCORE_CM7 -DSTM32H750xx -DSTM32H750IB -DARM_MATH_CM7 -Dflash_layout -DHSE_VALUE=16000000 -DUSE_HAL_DRIVER -DUSE_FULL_LL_DRIVER  -DNDEBUG=1 -DRELEASE=1 -ggdb -Wall -Wno-attributes -Wno-strict-aliasing -Wno-maybe-uninitialized -Wno-missing-attributes -Wno-stringop-overflow  -O3 -fasm -fdata-sections -ffunction-sections -finline-functions -Wno-register -fno-exceptions -fno-rtti  -std=gnu++14 -c src/daisy_field.cpp -o build/src/daisy_field.o -MD -MP -MF build/daisy_field.dep
In file included from src/daisy.h:12,
                 from src/daisy_seed.h:5,
                 from src/daisy_field.h:4,
                 from src/daisy_field.cpp:1:
src/per/qspi.h:77:9: error: 'dsy_gpio_pin' does not name a type; did you mean 'dsy_qspi_pin'?
   77 |         dsy_gpio_pin    pin_config[DSY_QSPI_PIN_LAST]; /**< & */
      |         ^~~~~~~~~~~~
      |         dsy_qspi_pin
In file included from src/daisy.h:17,
                 from src/daisy_seed.h:5,
                 from src/daisy_field.h:4,
                 from src/daisy_field.cpp:1:
src/dev/sdram.h:122:9: error: 'dsy_gpio_pin' does not name a type; did you mean 'dsy_qspi_pin'?
  122 |         dsy_gpio_pin    pin_config[DSY_SDRAM_PIN_LAST]; /**< & */
      |         ^~~~~~~~~~~~
      |         dsy_qspi_pin
In file included from src/daisy.h:39,
                 from src/daisy_seed.h:5,
                 from src/daisy_field.h:4,
                 from src/daisy_field.cpp:1:
src/hid/led.h:33:15: error: 'dsy_gpio_pin' has not been declared
   33 |     void Init(dsy_gpio_pin pin, bool invert, float samplerate = 1000.0f);
      |               ^~~~~~~~~~~~
src/hid/led.h:59:5: error: 'dsy_gpio' does not name a type
   59 |     dsy_gpio hw_pin_;
      |     ^~~~~~~~
In file included from src/daisy.h:40,
                 from src/daisy_seed.h:5,
                 from src/daisy_field.h:4,
                 from src/daisy_field.cpp:1:
src/hid/rgb_led.h:27:10: error: 'dsy_gpio_pin' has not been declared
   27 |     Init(dsy_gpio_pin red, dsy_gpio_pin green, dsy_gpio_pin blue, bool invert);
      |          ^~~~~~~~~~~~
src/hid/rgb_led.h:27:28: error: 'dsy_gpio_pin' has not been declared
   27 |     Init(dsy_gpio_pin red, dsy_gpio_pin green, dsy_gpio_pin blue, bool invert);
      |                            ^~~~~~~~~~~~
src/hid/rgb_led.h:27:48: error: 'dsy_gpio_pin' has not been declared
   27 |     Init(dsy_gpio_pin red, dsy_gpio_pin green, dsy_gpio_pin blue, bool invert);
      |                                                ^~~~~~~~~~~~
In file included from src/daisy.h:41,
                 from src/daisy_seed.h:5,
                 from src/daisy_field.h:4,
                 from src/daisy_field.cpp:1:
src/dev/sr_595.h:42:15: error: 'dsy_gpio_pin' has not been declared
   42 |     void Init(dsy_gpio_pin *pin_cfg, size_t num_daisy_chained = 1);
      |               ^~~~~~~~~~~~
src/dev/sr_595.h:55:5: error: 'dsy_gpio' does not name a type
   55 |     dsy_gpio pin_[NUM_PINS];
      |     ^~~~~~~~
In file included from src/daisy.h:44,
                 from src/daisy_seed.h:5,
                 from src/daisy_field.h:4,
                 from src/daisy_field.cpp:1:
src/dev/lcd_hd44780.h:32:9: error: 'dsy_gpio_pin' does not name a type; did you mean 'dsy_qspi_pin'?
   32 |         dsy_gpio_pin rs, en, d4, d5, d6, d7;
      |         ^~~~~~~~~~~~
      |         dsy_qspi_pin
In file included from src/daisy.h:44,
                 from src/daisy_seed.h:5,
                 from src/daisy_field.h:4,
                 from src/daisy_field.cpp:1:
src/dev/lcd_hd44780.h:68:5: error: 'dsy_gpio' does not name a type
   68 |     dsy_gpio lcd_pin_rs;
      |     ^~~~~~~~
src/dev/lcd_hd44780.h:69:5: error: 'dsy_gpio' does not name a type
   69 |     dsy_gpio lcd_pin_en;
      |     ^~~~~~~~
src/dev/lcd_hd44780.h:70:5: error: 'dsy_gpio' does not name a type
   70 |     dsy_gpio lcd_data_pin[4]; // D4-D7
      |     ^~~~~~~~
In file included from src/daisy_field.cpp:1:
src/daisy_field.h:215:5: error: 'dsy_gpio' does not name a type
  215 |     dsy_gpio                                 gate_out;
      |     ^~~~~~~~
src/daisy_field.cpp: In member function 'void daisy::DaisyField::Init(bool)':
src/daisy_field.cpp:86:9: error: 'dsy_gpio_pin' was not declared in this scope; did you mean 'dsy_qspi_pin'?
   86 |         dsy_gpio_pin p = seed.GetPin(sw_pin[i]);
      |         ^~~~~~~~~~~~
      |         dsy_qspi_pin
src/daisy_field.cpp:87:20: error: 'p' was not declared in this scope
   87 |         sw[i].Init(p, AudioCallbackRate());
      |                    ^
src/daisy_field.cpp:128:12: error: 'DSY_GPIOX' was not declared in this scope; did you mean 'DSY_GPIO_H'?
  128 |         = {DSY_GPIOX, 0}; // Not a real pin...
      |            ^~~~~~~~~
      |            DSY_GPIO_H
src/daisy_field.cpp:128:24: error: no match for 'operator=' (operand types are 'daisy::Pin' and '<brace-enclosed initializer list>')
  128 |         = {DSY_GPIOX, 0}; // Not a real pin...
      |                        ^
In file included from src/daisy.h:14,
                 from src/daisy_seed.h:5,
                 from src/daisy_field.h:4,
                 from src/daisy_field.cpp:1:
src/per/gpio.h:8:8: note: candidate: 'constexpr daisy::Pin& daisy::Pin::operator=(const daisy::Pin&)'
    8 | struct Pin
      |        ^~~
src/per/gpio.h:8:8: note:   no known conversion for argument 1 from '<brace-enclosed initializer list>' to 'const daisy::Pin&'
src/daisy_field.cpp:139:46: error: 'DSY_GPIOB' was not declared in this scope; did you mean 'DSY_GPIO_H'?
  139 |     field_led_i2c_config.pin_config.scl.Init(DSY_GPIOB, 8);
      |                                              ^~~~~~~~~
      |                                              DSY_GPIO_H
src/daisy_field.cpp:142:59: error: 'MASTER' is not a member of 'daisy::I2CHandle::Config::Mode'; did you mean 'I2C_MASTER'?
  142 |     field_led_i2c_config.mode  = I2CHandle::Config::Mode::MASTER;
      |                                                           ^~~~~~
      |                                                           I2C_MASTER
src/daisy_field.cpp:150:18: error: cannot convert 'daisy::Pin*' to 'daisy::Pin'
  150 |     gate_in.Init(&gate_in_pin);
      |                  ^~~~~~~~~~~~
      |                  |
      |                  daisy::Pin*
In file included from src/daisy.h:30,
                 from src/daisy_seed.h:5,
                 from src/daisy_field.h:4,
                 from src/daisy_field.cpp:1:
src/hid/gatein.h:30:19: note:   initializing argument 1 of 'void daisy::GateIn::Init(daisy::Pin)'
   30 |     void Init(Pin pin_cfg);
      |               ~~~~^~~~~~~
src/daisy_field.cpp:152:5: error: 'gate_out' was not declared in this scope
  152 |     gate_out.mode = DSY_GPIO_MODE_OUTPUT_PP;
      |     ^~~~~~~~
src/daisy_field.cpp:152:21: error: 'DSY_GPIO_MODE_OUTPUT_PP' was not declared in this scope
  152 |     gate_out.mode = DSY_GPIO_MODE_OUTPUT_PP;
      |                     ^~~~~~~~~~~~~~~~~~~~~~~
src/daisy_field.cpp:153:21: error: 'DSY_GPIO_NOPULL' was not declared in this scope
  153 |     gate_out.pull = DSY_GPIO_NOPULL;
      |                     ^~~~~~~~~~~~~~~
src/daisy_field.cpp:155:5: error: 'dsy_gpio_init' was not declared in this scope; did you mean 'dsy_qspi_init'?
  155 |     dsy_gpio_init(&gate_out);
      |     ^~~~~~~~~~~~~
      |     dsy_qspi_init
src/daisy_field.cpp:77:13: warning: unused variable 'sw_pin' [-Wunused-variable]
   77 |     uint8_t sw_pin[]  = {PIN_SW_1, PIN_SW_2};
      |             ^~~~~~
make: *** [Makefile:339: build/src/daisy_field.o] Error 1
